# research-code-python-starter-template

./: .gitignore  README.md  apply_configuration.py  config.json  pyproject.toml  run_autoformat.sh  run_ci_checks.sh
.github/workflows/: ci.yml
src/python_starter/: __init__.py  utils.py
