[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_starter"
version = "0.1.0"
description = "A basic starter for Python packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy",
]

[project.optional-dependencies]
develop = [
    "pytest>=7.2.2",
    "ruff",
    "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_starter = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "PL"]
ignore = [
    "D203", # 1 blank line required before class docstring (incompatible with D211)
    "D213", # Multi-line docstring summary should start at the second line (incompatible with D212)
]

[tool.ruff.lint.isort]
known-first-party = ["python_starter"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.analysis]
respect-type-ignore-comments = true
